checkboxes no longer overflow

--- a/app/elements/inputs/paper-toggle-option/paper-toggle-option.css
+++ b/app/elements/inputs/paper-toggle-option/paper-toggle-option.css
@@ -57,8 +57,5 @@
 
 #checkbox {
 	margin-left: 9px;
-}
-
-#checkboxLabel {
-	max-width: 950px;
+	max-width: 1000px;
 }
